# Progetto_3DGeometry

./: .gitmodules  CMakeLists.txt  README.md
Prof code/Catmull/: CMakeLists.txt  catmull 0 Vertex Creation.cpp  catmull.cpp
Prof code/esercizzi/: simple_main.cpp  simple_main_V0_BasicLoading.cpp  simple_main_V1_STLRemovingDups.cpp  simple_main_V2_CountingEdges.cpp
